--- a/app/src/main/res/layout/activity_finger_print_authentication.xml
+++ b/app/src/main/res/layout/activity_finger_print_authentication.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity"
     android:orientation="vertical"
-    android:background="#fff">
+    android:background="#fff"
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Add Image"
+            android:text="Finger Print Authentication"
             android:gravity="center"
             android:textStyle="bold"
             android:textSize="22sp"
@@ -30,41 +30,22 @@
         android:layout_height="0.5dp"
         android:background="#000"/>
 
-
-    <android.widget.Button
-        android:id="@+id/CaputureImage"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/purple_700"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="50dp"
-        android:text="Caputure Image"
-        android:textColor="#fff"
-        />
-
-    <ImageView
-        android:id="@+id/DisplayPic"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="50dp"
-        />
-
-    <android.widget.Button
-        android:id="@+id/Save"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/custom_bg"
-        android:text="Save"
         android:textColor="#000"
+        android:text="Status"
+        android:gravity="center"
+        android:id="@+id/Status"/>
+
+    <Button
+        android:id="@+id/Authenticate"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Click Here Authenticate"
+        android:textColor="#fff"
+        android:textSize="14sp"
         />
-
-
-
-
 
 </LinearLayout>
