--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,6 +31,7 @@
         android:hint="Enter Email"
         android:textColor="#000"
         android:textSize="16sp"
+        android:textColorHint="#BCB9B9"
         android:inputType="textEmailAddress"
         android:singleLine="true"
         android:gravity="center|left"
@@ -47,6 +48,8 @@
         android:hint="Enter Password"
         android:textColor="#000"
         android:textSize="16sp"
+        android:textColorHint="#BCB9B9"
+
         android:inputType="textPassword"
         android:singleLine="true"
         android:gravity="center|left"
