--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,11 +9,12 @@
     android:background="#fff">
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/app_logo"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:src="@drawable/app_icon"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="200dp"
+        />
 
 
 
